kubectl1/Deployment-Mount-Volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileshare-deployment
  labels:
    app: fileshare-deployment
spec:
  replicas: 2
  selector:
      matchLabels:
        app: fileshare-deployment
  template:
    metadata:
      labels:
        app: fileshare-deployment
    spec:
      containers:
      - name: fileshare-deployment
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: azurefileshare
          mountPath: /usr/share/nginx/html
      volumes:
      - name: azurefileshare
        azureFile:
          secretName: azure-storage-secret
          shareName: my-file-share
          readOnly: false
