kubectl1/Deployment-PV-PVC-Azure.yaml
apiVersion: v1
kind: Pod
metadata:
 name: azure-2
spec:
 containers:
  - image: nginx
    name: azure-2
    volumeMounts:
      - name: azure
        mountPath: /usr/share/nginx/html
 volumes:
  - name: azure
    persistentVolumeClaim:
      claimName: fileshare-pvc
